<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/go_to_settings"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_string"
            android:backgroundTint="@color/medium_violet_red"
            />

        <Button
            android:id="@+id/go_to_synzer"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name_string"
            android:backgroundTint="@color/tomato_500"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/go_to_questions"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/questions_string"
            android:backgroundTint="@color/purple_200"
            />

        <Button
            android:id="@+id/go_to_editors"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/editors_string"
            android:backgroundTint="@color/purple_500"
            />

        <Button
            android:id="@+id/go_to_request_home_task"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/home_task_string"
            android:backgroundTint="@color/teal_200"
            />
    </LinearLayout>

</LinearLayout>

