<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SynzerActivity">

    <EditText
        android:id="@+id/text_editor"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/default_choice_string"
        android:autofillHints="@string/default_choice_string"
        android:textSize="25sp"
        android:inputType="number"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/enter_string"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_editor"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/last_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_requests_string"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/word_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_requests"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:listitem="@layout/text_in_list"
        />

</androidx.constraintlayout.widget.ConstraintLayout>